# balisc

./: README.md
.github/workflows/: c-cpp.yml
https/github.com/decentralizedbloodbank/: VanishingPointDetection
scilab/: ACKNOWLEDGEMENTS  CHANGES.md  Makefile.in  Scilab.sln  Scilab_f2c.sln  aclocal.m4  build.incl.xml  configure  configure.ac
scilab/contrib/: Makefile.in
scilab/desktop/: Makefile.in
scilab/etc/: jvm_options.xml  librarypath.xml  scilab.start
scilab/m4/: ax_check_x86_features.m4  java.m4
scilab/modules/: Makefile.am  Makefile.in
scilab/modules/action_binding/: Makefile.in
scilab/modules/api_scilab/: Makefile.am  Makefile.in
scilab/modules/arnoldi/: Makefile.in
scilab/modules/ast/: Makefile.am  Makefile.in  ast.vcxproj  elementary_functions_Import.def
scilab/modules/atoms/: Makefile.in
scilab/modules/boolean/: Makefile.am  Makefile.in
scilab/modules/cacsd/: Makefile.am  Makefile.in  license.txt
scilab/modules/call_scilab/: Makefile.in
scilab/modules/commons/: Makefile.in
scilab/modules/compatibility_functions/: Makefile.in
scilab/modules/completion/: Makefile.am  Makefile.in
scilab/modules/console/: Makefile.am  Makefile.in
scilab/modules/core/: Makefile.am  Makefile.in
scilab/modules/coverage/: Makefile.in
scilab/modules/data_structures/: Makefile.am  Makefile.in
scilab/modules/demo_tools/: Makefile.in
scilab/modules/development_tools/: Makefile.in
scilab/modules/differential_equations/: Makefile.am  Makefile.in
scilab/modules/dynamic_link/: Makefile.am  Makefile.in
scilab/modules/elementary_functions/: Makefile.am  Makefile.in  license.txt
scilab/modules/external_objects/: Makefile.am  Makefile.in
scilab/modules/external_objects_java/: Makefile.in
scilab/modules/fftw/: Makefile.in
scilab/modules/fileio/: Makefile.am  Makefile.in  fileio.vcxproj  fileio.vcxproj.filters
scilab/modules/functions/: Makefile.am  Makefile.in
scilab/modules/functions_manager/: Makefile.in
scilab/modules/genetic_algorithms/: Makefile.in
scilab/modules/graph/: Makefile.in
scilab/modules/graphic_export/: Makefile.in
scilab/modules/graphic_objects/: Makefile.in
scilab/modules/graphics/: Makefile.am  Makefile.in
scilab/modules/gui/: Makefile.in
scilab/modules/hdf5/: Makefile.in
scilab/modules/helptools/: Makefile.in
scilab/modules/history_browser/: Makefile.in
scilab/modules/history_manager/: Makefile.am  Makefile.in
scilab/modules/integer/: Makefile.am  Makefile.in
scilab/modules/integer/etc/: integer.start
scilab/modules/integer/help/en_US/: intmax.xml  intmin.xml
scilab/modules/integer/includes/: integer_gw.hxx
scilab/modules/integer/locales/: ca_ES.po  cs_CZ.po  de_DE.po  es_ES.po  fr_FR.po  integer.pot  it_IT.po  ja_JP.po  pl_PL.po  pt_BR.po  ru_RU.po  uk_UA.po  zh_CN.po  zh_TW.po
scilab/modules/integer/macros/: %_iconvert.sci  %i_Matplot.sci  %i_j_i.sci  %i_j_s.sci  %i_p_i.sci  %i_p_s.sci  %s_j_i.sci  %s_p_i.sci  buildmacros.sce  mgeti.sci
scilab/modules/integer/sci_gateway/cpp/: integer_gw.cpp  sci_double.cpp  sci_flintmax.cpp  sci_iconvert.cpp  sci_int.cpp  sci_intmax.cpp  sci_intmin.cpp  sci_inttype.cpp
scilab/modules/integer/src/c/: integer.vcxproj  integer.vcxproj.filters
scilab/modules/integer/tests/nonreg_tests/: bug_10782.tst  bug_10814.tst  bug_1977.tst  bug_4024.dia.ref  bug_4024.tst
scilab/modules/integer/tests/unit_tests/: intmax.tst  intmin.tst  intops.dia.ref  intops.tst
scilab/modules/interpolation/: Makefile.in
scilab/modules/io/: Makefile.am  Makefile.in
scilab/modules/javasci/: Makefile.in
scilab/modules/jvm/: Makefile.in
scilab/modules/linear_algebra/: Makefile.am  Makefile.in
scilab/modules/localization/: Makefile.am  Makefile.in
scilab/modules/m2sci/: Makefile.in
scilab/modules/matio/: Makefile.in
scilab/modules/mexlib/: Makefile.in
scilab/modules/modules_manager/: Makefile.in
scilab/modules/mpi/: Makefile.in
scilab/modules/optimization/: Makefile.in
scilab/modules/output_stream/: Makefile.am  Makefile.in  output_stream.iss
scilab/modules/overloading/: Makefile.in
scilab/modules/parallel/: Makefile.in
scilab/modules/parameters/: Makefile.in
scilab/modules/polynomials/: Makefile.am  Makefile.in
scilab/modules/polynomials/etc/: polynomials.start
scilab/modules/polynomials/includes/: polynomials_gw.hxx
scilab/modules/polynomials/locales/: ca_ES.po  cs_CZ.po  de_DE.po  es_ES.po  fr_FR.po  it_IT.po  ja_JP.po  pl_PL.po  polynomials.pot  pt_BR.po  ru_RU.po  uk_UA.po  zh_CN.po  zh_TW.po
scilab/modules/polynomials/macros/: buildmacros.sce  determ.sci  detr.sci  factors.sci  gcd.sci  horner.sci  htrianr.sci  inv_coeff.sci  invr.sci  lcm.sci  lcmdiag.sci  pdiv.sci  pfactors.sci
scilab/modules/polynomials/sci_gateway/cpp/: sci_bezout.cpp  sci_coeff.cpp  sci_degree.cpp  sci_poly.cpp  sci_pppdiv.cpp  sci_roots.cpp  sci_sfact.cpp  sci_simp.cpp  sci_simpMode.cpp  sci_varn.cpp
scilab/modules/polynomials/src/cpp/: rpoly.cpp
scilab/modules/polynomials/src/fortran/: polynomials_f.vfproj  polynomials_f2c.vcxproj  polynomials_f2c.vcxproj.filters
scilab/modules/polynomials/tests/nonreg_tests/: bug_11110.tst  bug_12679.tst  bug_15599.tst  bug_415.tst  bug_7101.dia.ref  bug_7101.tst  issue_368.tst  issue_580.tst
scilab/modules/polynomials/tests/unit_tests/: diophant.tst  horner.tst  pol2str.tst  polops.dia.ref  polops.tst
scilab/modules/prebuildjava/: Makefile.in
scilab/modules/preferences/: Makefile.am  Makefile.in
scilab/modules/randlib/: Makefile.in
scilab/modules/renderer/: Makefile.in
scilab/modules/scicos/: Makefile.am  Makefile.in
scilab/modules/scinotes/: Makefile.in
(+5720 files in other folders)
